26-kubernetes/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: goserver
  labels:
    app: goserver
spec:
  selector: 
    matchLabels:
      app: goserver #Precisa ser o mesmo nome do selector.app do service para ele se achar
  replicas: 3
  template: 
    metadata:
      labels: 
        app: "goserver"
    spec: 
      containers: 
        - name: goserver
          image: "rodrigolucio/hello-go:v5.8"

          resources:
            requests:
              cpu: "0.3" # Minimo para rodar, guarda no cluster esse valor (reserva no sistema), se for a mais fica como pending
              memory: 20Mi
            limits:
              cpu: "0.3" # Maximo que vai utilizar, não pode ultrapassar o poder do cluster em relação numero de replicas X cpu
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /startup
              port: 8000
            periodSeconds: 1
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /readiness
              port: 8000
            periodSeconds: 1
            failureThreshold: 3
            initialDelaySeconds: 1 

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000 # Porta do container
            periodSeconds: 5 # Faz a verificação a cada 5 segundos do healthz
            failureThreshold: 3 # Quantas vezes tem que dar problema para ele reiniciar
            timeoutSeconds: 1 # Quanto tempo ele espera o health
            successThreshold: 1 #Quantas vezes ele testa para ter certeza que esta OK, famoso teste para garantir
            initialDelaySeconds: 15 # aguarda 15 segundos para começar a verificação
