26-kubernetes/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: LoadBalancer # Para acessar em um serviço cloud gerenciavel que precise de um IP EXTERNO: LoadBalancer
  ports: 
    - name: goserver-service
      port: 80 #Porta do service
      targetPort: 8000 #Porta do container
      protocol: TCP
